--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-starter-kit",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -15,9 +16,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "githubpages": "rm -rf build && rm -rf docs && npm run build && mv build docs && git add docs/* && git commit -m \"Publish in GitHub Pages\" && git push",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+    
+  }
+  ,
   "eslintConfig": {
     "extends": [
       "react-app",
